# AdventOfCode2024

./: .gitignore  CMakeLists.txt  README.md  SimpleTest.cpp  Test.txt  main.cpp
Base/: BaseTypeDefs.h  IDayProblemBase.cpp  IDayProblemBase.h  ProblemBase.cpp  ProblemBase.h  TemplateTest.cpp  TemplateTest.h
Base/Bounds/: Bound.cpp  Bound.h
Base/ConsoleUtility/: ListChoice.cpp  ListChoice.h  ListChoice.tpp
Base/DayEnum/: DayEnum.cpp  DayEnum.h
Base/DaySolver/: IDaySolver.h
Base/Direction/: Type.cpp  Type.h
Base/Grid/: GridUtility.h  GridUtility.tpp  TGrid.h  TGrid.tpp
Base/MenuSystem/: MenuSystem.cpp  MenuSystem.h
Base/Vector2D/: Vector2D.cpp  Vector2D.h
Day01/: Day01.cpp  Day01.h
Day02/: Day02.cpp  Day02.h
Days/Day01/: Day01.cpp  Day01.h
Days/Day02/: Day02.cpp  Day02.h
Days/Day03/: Day03.cpp  Day03.h
Days/Day04/: Day04.cpp  Day04.h
Days/Day05/: Day05.cpp  Day05.h
Days/Day06/: Day06.cpp  Day06.h
Days/Day07/: Day07.cpp  Day07.h
Days/Day08/: Day08.cpp  Day08.h
Days/Day09/: Day09.cpp  Day09.h
Days/Day10/: Day09Tests.cpp  Day10.cpp  Day10.h  Day10Tests.cpp
Resources/: Config  Day10-TestInput.txt
Utility/: GridMath.cpp  GridMath.h  IOUtility.cpp  IOUtility.h  PrimeFactorization.cpp  PrimeFactorization.h  TerminalUtility.cpp  TerminalUtility.h
Utility/Clock/: Stopwatch.cpp  Stopwatch.h
Utility/ParseUtility/: ParseUtility.cpp  ParseUtility.h  ParseUtility.tpp
day-01/: Day-01.cpp  Day-01.h
